project2/test/11711310_test_03.out
Error type 6 at Line 2: rvalue on the left side of assignment operator
Error type 1 at Line 3: undefined variable: a
