project2/test/11711310_test_03.spl
int foo() {
  1 = 12;
  return a;
}

int main() {
  foo();
}
